# Campusblog

./: .gitignore  CampusBlog.code-workspace  README.md
Client/: .gitignore  frpc.ini  jsconfig.json  package.json  rollup.config.js  tsconfig.json
Client/public/: gallery.min.css  index.html
Client/src/: App.svelte  main.ts  nav.svelte  store.ts
Client/src/Components/: changeEmailandNameModal.svelte  changePasswordModal.svelte  changeUsernameModal.svelte  noticeModal.svelte  searchBlogsModal.svelte  uploadImgModal.svelte
Client/src/Components/Button/: Button.svelte
Client/src/Components/Card/: Card.svelte
Client/src/Components/InputField/: InputField.svelte
Client/src/Home/: blog.svelte  blogContent.svelte  blogEdit.svelte  home.svelte  reportModal.svelte  uploadImgModal.svelte
Client/src/Login/: login.svelte  me.svelte  register.svelte
Client/src/styles/: gallery.less  gallery.min.scss  gallery.scss  github-markdown.scss
Client/src/tool/: api.ts  codec.ts  rgbaster.ts  rgbaster_helpers.ts
Client/src/typeing/: svelte-spa-router-Router.svelte.d.ts  svelte-spa-router-wrap.d.ts
Server/: .gitignore  README.md  djoser-2.1.0-py3-none-any.whl  fakers.py  frpc.ini  manage.py  pyproject.toml  requirements.txt
Server/Campusauth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Server/Campusauth/static/css/: login.css
Server/Campusauth/templates/: base.html  login.html
Server/Campusblog/: asgi.py  fields.py  settings.py  urls.py  wsgi.py
Server/Campusblogs/: admin.py  apps.py  models.py  resources.py  serializers.py  views.py
(+2 files in other folders)
